fix: better contrast ration for links

--- a/src/global.css
+++ b/src/global.css
@@ -2,7 +2,7 @@
   --color-text-contrast: #fff;
   --color-text-primary: #000;
   --color-text-secondary: rgb(0 0 0 / 50%);
-  --color-text-link: #327fc8;
+  --color-text-link: #2e669e;
   --color-text-link-hover: #d36507;
   --color-border: rgb(0 0 0 / 10%);
   --color-brand-primary: #3697f1;
